--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora de Propinas</title>
-    <link rel="stylesheet" href="esilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1>💰 Calculadora de Propinas</h1>
